methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:92: error: Unmatched closing brace '}' ignored here
}
^